fix an issue with controls/map spacing and sizing; optimize panorama images and remove them from .gitignore

--- a/public/assets/css/components/_map.scss
+++ b/public/assets/css/components/_map.scss
@@ -1,4 +1,18 @@
 #map {
   height: 100%;
   width: 100%;
+
+  transition: 300ms;
+  &.controls-are-visible {
+    transition: 300ms;
+    width: 75%;
+  }
+}
+
+@media screen and (max-width: $bp-mobile) {
+  #map {
+    &.controls-are-visible {
+      width: 0%;
+    }
+  }
 }
