--- a/public/assets/css/containers/_controlsAndMap.scss
+++ b/public/assets/css/containers/_controlsAndMap.scss
@@ -3,6 +3,6 @@
   display: flex;
   flex-direction: row;
   width: 100%;
-  height: 900px;
+  height: 92vh;
   overflow-y: hidden;
 }
