--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -388,8 +388,18 @@ li {
 #map {
   height: 100%;
   width: 100%;
+  transition: 300ms;
+}
+#map.controls-are-visible {
+  transition: 300ms;
+  width: 75%;
 }
 
+@media screen and (max-width: 768px) {
+  #map.controls-are-visible {
+    width: 0%;
+  }
+}
 .popup-wrap .mapboxgl-popup-close-button {
   width: 30px;
   color: #FFFCF9;
@@ -506,7 +516,7 @@ li {
   display: flex;
   flex-direction: row;
   width: 100%;
-  height: 900px;
+  height: 92vh;
   overflow-y: hidden;
 }
 
